Добавил контентные изображения в вёрстку.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8">
     <title>Барбершоп «Бородинский»</title>
   </head>
-  
   <body>
     <header>
       <nav>
         <a>
-        <img src="https://via.placeholder.com/368x153" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
+        <img src="img/index-logo.svg" width="368" height="153" alt="Логотип барбершопа «Бородинский»">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -59,7 +58,7 @@
       <section>
         <h2>Фотогалерея</h2>
         <figure>
-          <a href="#"><img src="https://via.placeholder.com/286x164" width="286" height="164" alt="Интерьер"></a>
+          <a href="#"><img src="img/photo-1.jpg" width="286" height="164" alt="Интерьер"></a>
         </figure>
         <button type="button">Назад</button>
         <button type="button">Вперед</button>
@@ -94,9 +93,11 @@
         </p>
         <div>
           <p>Давайте дружить!</p>
-          <li><a href="#">Вконтакте</a></li>
-          <li><a href="#">Фейсбук</a></li>
-          <li><a href="#">Инстаграм</a></li>
+          <ul>
+            <li><a href="#">Вконтакте</a></li>
+            <li><a href="#">Фейсбук</a></li>
+            <li><a href="#">Инстаграм</a></li>
+          </ul>
         </div>
         <p>
           Разработано:
