--- a/catalog-item.html
+++ b/catalog-item.html
@@ -4,12 +4,11 @@
 	 <meta charset="utf-8">
 	 <title>Каталог</title>
   </head>
-
   <body>
     <header>
       <nav>
         <a href="index.html">
-          <img src="https://via.placeholder.com/111x24" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+          <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
         </a>
         <ul>
           <li><a href="info.html">Информация</a></li>
@@ -36,12 +35,12 @@
       <section>
         <h2>Изображения товара</h2>
         <p>
-          <li><img src="https://via.placeholder.com/460x498" alt="Фото товара 3" width="460" height="498"></li>
+          <li><img src="img/item-3.jpg" alt="Фото товара 3" width="460" height="498"></li>
         </p>
         <ul>
-          <li><img src="https://via.placeholder.com/140x149" alt="Фото товара 1" width="140" height="149"></li>
-          <li><img src="https://via.placeholder.com/140x149" alt="Фото товара 2" width="140" height="149"></li>
-          <li><img src="https://via.placeholder.com/140x149" alt="Фото товара 3" width="140" height="149"></li>
+          <li><img src="img/item-1-small.jpg" alt="Фото товара 1" width="140" height="149"></li>
+          <li><img src="img/item-2-small.jpg" alt="Фото товара 2" width="140" height="149"></li>
+          <li><img src="img/item-3-small.jpg" alt="Фото товара 3" width="140" height="149"></li>
         </ul>
       </section>
 
