--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,11 @@
 		<meta charset="utf-8">
 		<title>Каталог</title>
 	</head>
-
 	<body>
 		<header>
 			<nav>
 				<a href="index.html">
-					<img src="https://via.placeholder.com/111x24" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
 				</a>
 				<ul>
 					<li><a href="info.html">Информация</a></li>
@@ -49,7 +48,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-										<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+									<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
 								</a>
 							</p>
 							<p>
@@ -67,7 +66,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-									<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
+									<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
 								</a>
 							</p>
 							<p>
@@ -84,7 +83,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-									<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Гель для волос «Suavecito»">
+									<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
 								</a>
 							</p>
 							<p>
@@ -101,7 +100,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-									<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Глина для укладки волос «American crew»">
+									<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
 								</a>
 							</p>
 							<p>
@@ -118,7 +117,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-									<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Гель для волос «American crew»">
+									<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
 								</a>
 							</p>
 							<p>
@@ -135,7 +134,7 @@
 							</h3>
 							<p>
 								<a href="catalog-item.html">
-									<img src="https://via.placeholder.com/220x165" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+									<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
 								</a>
 							</p>
 							<p>
