--- a/catalog-item.html
+++ b/catalog-item.html
@@ -1,99 +1,131 @@
 <!DOCTYPE html>
 <html>
-  <head>
-	 <meta charset="utf-8">
-	 <title>Каталог</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="index.html">
-          <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
-        </a>
-        <ul>
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="price.html">Прайс-лист</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul>
-          <li><button type="button">Войти</button></li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <h1>Набор для путешествий «Baxter of California»</h1>
+<head>
+  <meta charset="utf-8">
+  <title>Каталог</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="index.html">
+        <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+      </a>
       <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="catalog.html">Средства для ухода</a></li>
-        <li>Набор для путешествий «Baxter of California»</li>
+        <li><a href="info.html">Информация</a></li>
+        <li><a href="news.html">Новости</a></li>
+        <li><a href="price.html">Прайс-лист</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
       </ul>
+      <ul>
+        <li>
+          <a href="">Войти</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
 
-      <section>
-        <h2>Изображения товара</h2>
-        <p>
-          <li><img src="img/item-3.jpg" alt="Фото товара 3" width="460" height="498"></li>
-        </p>
-        <ul>
-          <li><img src="img/item-1-small.jpg" alt="Фото товара 1" width="140" height="149"></li>
-          <li><img src="img/item-2-small.jpg" alt="Фото товара 2" width="140" height="149"></li>
-          <li><img src="img/item-3-small.jpg" alt="Фото товара 3" width="140" height="149"></li>
-        </ul>
-      </section>
+  <main>
+    <h1>Набор для путешествий «Baxter of California»</h1>
+    <ul>
+      <li>
+        <a href="index.html">Главная</a>
+      </li>
+      <li>
+        <a href="#">Каталог</a>
+      </li>
+      <li>
+        <a href="catalog.html">Средства для ухода</a>
+      </li>
+      <li>
+        Набор для путешествий «Baxter of California»
+      </li>
+    </ul>
 
-      <section>
-        <h2>Описание товара</h2>
-        <p>
-          Есть в наличии
-        </p>
-        <p>
-          Артикул: dexter-ae
-        </p>
-        <p>
-          Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
-        </p>
-        <p>
-          <b>2 900 ₽</b>
-          <a href="#">Купить</a>
-        </p>
-        <h3>В набор входят:</h2>
-          <ul>
-            <li>Средство для умывания (50 мл)</li>
-            <li>Увлажняющий крем (50 мл)</li>
-            <li>Крем для бритья (50 мл)</li>
-            <li>Крем после бритья, шампунь (50 мл)</li>
-            <li>Удобная кожаная косметичка</li>
-          </ul>
-      </section>
-    </main>
-
-    <footer>
-      <p>
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
-      </p>
-      <div>
-        <p>Давайте дружить!</p>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </div>
-      <p>
-        Разработано:
-        <a href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-    </footer>
-      
     <section>
-      <h2>Личный кабинет</h2>
-      <p>Введите свой логин и пароль.</p>
-      <!-- Здесь будет форма -->
-      <button type="button">Закрыть</button>
+      <h2 class="visually-hidden">Изображения товара</h2>
+      <p>
+        <li><img src="img/item-3.jpg" alt="Крупное фото товара 3" width="460" height="498"></li>
+      </p>
+      <ul>
+        <li><img src="img/item-1-small.jpg" alt="Фото товара 1" width="140" height="149"></li>
+        <li><img src="img/item-2-small.jpg" alt="Фото товара 2" width="140" height="149"></li>
+        <li><img src="img/item-3-small.jpg" alt="Фото товара 3" width="140" height="149"></li>
+      </ul>
     </section>
-  </body>
+
+    <section>
+      <h2 class="visually-hidden">Описание товара</h2>
+      <p>
+        Есть в наличии
+      </p>
+      <p>
+        Артикул: dexter-ae
+      </p>
+      <p>
+        Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что
+        нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем,
+        крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
+      </p>
+      <p>
+        <b>2 900 ₽</b>
+        <a href="#">Купить</a>
+      </p>
+      <h3>В набор входят:</h3>
+      <ul>
+        <li>Средство для умывания (50 мл)</li>
+        <li>Увлажняющий крем (50 мл)</li>
+        <li>Крем для бритья (50 мл)</li>
+        <li>Крем после бритья, шампунь (50 мл)</li>
+        <li>Удобная кожаная косметичка</li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>
+      Барбершоп «Бородинский»<br>
+      Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+      <a href="map.html">Как нас найти?</a><br>
+      Телефон: +7 (812) 666-02-66
+    </p>
+    <div>
+      <p>Давайте дружить!</p>
+      <li><a href="#">Вконтакте</a></li>
+      <li><a href="#">Фейсбук</a></li>
+      <li><a href="#">Инстаграм</a></li>
+    </div>
+    <p>
+      Разработано:
+      <a href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
+  </footer>
+
+  <section>
+    <h2>Личный кабинет</h2>
+    <p>Введите свой логин и пароль.</p>
+    <form action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="login">Логин</label>
+        <input type="text" name="login" id="login" placeholder="Логин">
+      </p>
+      <p>
+        <label for="password">Пароль</label>
+        <input type="password" name="password" id="password" placeholder="Пароль">
+      </p>
+      <p>
+        <label>
+          <input type="checkbox" name="remember">
+          Запомните меня
+        </label>
+        <a href="">Я забыл пароль!</a>
+      </p>
+      <button type="submit">Войти</button>
+    </form>
+    <button type="button">Закрыть</button>
+  </section>
+</body>
+
 </html>
