--- a/catalog.html
+++ b/catalog.html
@@ -1,182 +1,264 @@
 <!DOCTYPE html>
 <html lang="ru">
-	<head>
-		<meta charset="utf-8">
-		<title>Каталог</title>
-	</head>
-	<body>
-		<header>
-			<nav>
-				<a href="index.html">
-					<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
-				</a>
-				<ul>
-					<li><a href="info.html">Информация</a></li>
-					<li><a href="news.html">Новости</a></li>
-					<li><a href="price.html">Прайс-лист</a></li>
-					<li><a href="catalog.html">Магазин</a></li>
-					<li><a href="contacts.html">Контакты</a></li>
-				</ul>
-				<ul>
-					<li><button type="button">Войти</button></li>
-				</ul>
-			</nav>
-		</header>
 
-		<main>
-			<h1>Средства для ухода</h1>
+<head>
+	<meta charset="utf-8">
+	<title>Каталог</title>
+</head>
+
+<body>
+	<header>
+		<nav>
+			<a href="index.html">
+				<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+			</a>
 			<ul>
-				<li><a href="index.html">Главная</a></li>
-				<li><a href="#">Каталог</a></li>
-				<li>Средства для ухода</li>
+				<li><a href="info.html">Информация</a></li>
+				<li><a href="news.html">Новости</a></li>
+				<li><a href="price.html">Прайс-лист</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
+				<li><a href="contacts.html">Контакты</a></li>
 			</ul>
+			<ul>
+				<li>
+					<a href="">Войти</a>
+				</li>
+			</ul>
+		</nav>
+	</header>
 
-			<section>
-				<h2>Фильтр товаров</h2>
-				<!-- Здесь будет форма -->
-			</section>
-			
-			<section>
-				<h2>Список средств для ухода</h2>
-				<ul>
-					<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Набор для путешествий</span>
-									<span>«Baxter of California»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
-								</a>
-							</p>
-							<p>
-								<b>2 900 ₽</b>
-								<a href="#">Купить</a>
-							</p>
+	<main>
+		<h1>Средства для ухода</h1>
+		<ul>
+			<li>
+				<a href="index.html">Главная</a>
+			</li>
+			<li>
+				<a href="#">Каталог</a>
+			</li>
+			<li>
+				Средства для ухода
+			</li>
+		</ul>
 
-					</li>
-					<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Увлажняющий кондиционер</span>
-									<span>«Baxter of California»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-2.jpg" width="220" height="165" alt="Увлажняющий кондиционер «Baxter of California»">
-								</a>
-							</p>
-							<p>
-								750 ₽
-								<a href="#">Купить</a>
-							</p>
+		<section>
+			<h2 class="visually-hidden">Фильтр товаров</h2>
+			<form action="https://echo.htmlacademy.ru" method="get">
+				<fieldset>
+					<legend>Производители:</legend>
+					<ul>
+						<li>
+							<label for>
+								<input type="checkbox" name="check-1" checked>
+								Baxter of California
+							</label>
 						</li>
 						<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Гель для волос</span>
-									<span>«Suavecito»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
-								</a>
-							</p>
-							<p>
-								290 ₽
-								<a href="#">Купить</a>
-							</p>
+							<label for>
+								<input type="checkbox" name="check-2">
+								Mr Natty
+							</label>
 						</li>
 						<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Глина для укладки волос</span>
-									<span>«American crew»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
-								</a>
-							</p>
-							<p>
-								500 ₽
-								<a href="#">Купить</a>
-							</p>
+							<label for>
+								<input type="checkbox" name="check-3" checked>
+								Suavecito
+							</label>
 						</li>
 						<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Гель для волос</span>
-									<span>«American crew»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
-								</a>
-							</p>
-							<p>
-								300 ₽
-								<a href="#">Купить</a>
-							</p>
+							<label for>
+								<input type="checkbox" name="check-4">
+								Malin+Goetz
+							</label>
 						</li>
 						<li>
-							<h3>
-								<a href="catalog-item.html">
-									<span>Набор для бритья</span>
-									<span>«Baxter of California»</span>
-								</a>
-							</h3>
-							<p>
-								<a href="catalog-item.html">
-									<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
-								</a>
-							</p>
-							<p>
-								3 900 ₽
-								<a href="#">Купить</a>
-							</p>
+							<label for>
+								<input type="checkbox" name="check-5">
+								Murray's
+							</label>
 						</li>
-				</ul>
-				<ul>
-					<li><a href="#">1</a></li>
-					<li><a>2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-				</ul>
-			</section>
-		</main>
+						<li>
+							<label for>
+								<input type="checkbox" name="check-6" checked>
+								American Crew
+							</label>
+						</li>
+					</ul>
+				</fieldset>
 
-		<footer>
-      <p>
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="map.html">Как нас найти?</a><br>
-        Телефон: +7 (812) 666-02-66
-      </p>
-      <div>
-        <p>Давайте дружить!</p>
-        <li><a href="#">Вконтакте</a></li>
-        <li><a href="#">Фейсбук</a></li>
-        <li><a href="#">Инстаграм</a></li>
-      </div>
-      <p>
-        Разработано:
-        <a href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
-		</footer>
-		
-    <section>
-      <h2>Личный кабинет</h2>
-      <p>Введите свой логин и пароль.</p>
-      <!-- Здесь будет форма -->
-      <button type="button">Закрыть</button>
+				<fieldset>
+					<legend>Группы товаров:</legend>
+					<ul>
+						<li>
+							<label>
+								<input type="radio" name="groups" value="shave">
+								Бритвенные принадлежности
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="radio" name="groups" value="care">
+								Средства для ухода
+							</label>
+						</li>
+						<li>
+							<label>
+								<input type="radio" name="groups" value="accessories">
+								Аксессуары
+							</label>
+						</li>
+					</ul>
+				</fieldset>
+				<button type="submit">Показать</button>
+			</form>
 		</section>
-	</body>
-</html>
 
+		<section>
+			<h2 class="visually-hidden">Список средств для ухода</h2>
+			<ul>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Набор для путешествий</span>
+							<span>«Baxter of California»</span>
+						</h3>
+						<p>
+							<img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
+						</p>
+					</a>
+					<p>
+						<b>2 900 ₽</b>
+						<a href="#">Купить</a>
+					</p>
+				</li>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Увлажняющий кондиционер</span>
+							<span>«Baxter of California»</span>
+						</h3>
+						<p>
+							<img src="img/product-2.jpg" width="220" height="165"
+								alt="Увлажняющий кондиционер «Baxter of California»">
+						</p>
+					</a>
+					<p>
+						750 ₽
+						<a href="#">Купить</a>
+					</p>
+				</li>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Гель для волос</span>
+							<span>«Suavecito»</span>
+						</h3>
+						<p>
+							<img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
+						</p>
+					</a>
+					<p>
+						290 ₽
+						<a href="#">Купить</a>
+					</p>
+				</li>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Глина для укладки волос</span>
+							<span>«American crew»</span>
+						</h3>
+						<p>
+							<img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
+						</p>
+					</a>
+					<p>
+						500 ₽
+						<a href="#">Купить</a>
+					</p>
+				</li>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Гель для волос</span>
+							<span>«American Crew»</span>
+						</h3>
+						<p>
+							<img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
+						</p>
+					</a>
+					<p>
+						300 ₽
+						<a href="#">Купить</a>
+					</p>
+				</li>
+				<li>
+					<a href="catalog-item.html">
+						<h3>
+							<span>Набор для бритья</span>
+							<span>«Baxter of California»</span>
+						</h3>
+						<p>
+							<img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
+						</p>
+					</a>
+					<p>
+						3 900 ₽
+						<a href="#">Купить</a>
+					</p>
+				</li>
+			</ul>
+			<ul>
+				<li><a href="#">1</a></li>
+				<li><a>2</a></li>
+				<li><a href="#">3</a></li>
+				<li><a href="#">4</a></li>
+			</ul>
+		</section>
+	</main>
+
+	<footer>
+		<p>
+			Барбершоп «Бородинский»<br>
+			Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+			<a href="map.html">Как нас найти?</a><br>
+			Телефон: +7 (812) 666-02-66
+		</p>
+		<div>
+			<p>Давайте дружить!</p>
+			<li><a href="#">Вконтакте</a></li>
+			<li><a href="#">Фейсбук</a></li>
+			<li><a href="#">Инстаграм</a></li>
+		</div>
+		<p>
+			Разработано:
+			<a href="https://htmlacademy.ru">HTML Academy</a>
+		</p>
+	</footer>
+
+	<section>
+		<h2>Личный кабинет</h2>
+		<p>Введите свой логин и пароль.</p>
+		<form action="https//:echo.htmlacademy.ru" method="post">
+			<p>
+				<label for="login">Логин</label>
+				<input type="text" name="login" id="login" placeholder="Логин">
+			</p>
+			<p>
+				<label for="password">Пароль</label>
+				<input type="password" name="password" id="password" placeholder="Пароль">
+			</p>
+			<p>
+				<label>
+					<input type="checkbox" name="remember">
+					Запомните меня
+				</label>
+				<a href="">Я забыл пароль!</a>
+			</p>
+			<button type="submit">Войти</button>
+		</form>
+		<button type="button">Закрыть</button>
+	</section>
+</body>
+
+</html>
