--- a/catalog-item.html
+++ b/catalog-item.html
@@ -13,7 +13,7 @@
 
   <body class="inner-page">
     <header class="main-header">
-      <nav class="main-navigation">
+      <nav class="main-navigation container">
         <a class="main-header-logo" href="index.html">
           <img
             src="img/logo.svg"
@@ -54,74 +54,76 @@
         </li>
       </ul>
 
-      <section class="product-photos">
-        <h2 class="visually-hidden">Изображения товара</h2>
-        <p class="product-photo-full">
-          <img
-            src="img/item-3.jpg"
-            alt="Крупное фото товара 3"
-            width="460"
-            height="498"
-          />
-        </p>
-        <ul class="product-photo-preview">
-          <li>
+      <div class="catalog-columns">
+        <section class="product-photos">
+          <h2 class="visually-hidden">Изображения товара</h2>
+          <p class="product-photo-full">
             <img
-              src="img/item-1-small.jpg"
-              alt="Фото товара 1"
-              width="140"
-              height="149"
+              src="img/item-3.jpg"
+              alt="Крупное фото товара 3"
+              width="460"
+              height="498"
             />
-          </li>
-          <li>
-            <img
-              src="img/item-2-small.jpg"
-              alt="Фото товара 2"
-              width="140"
-              height="149"
-            />
-          </li>
-          <li>
-            <img
-              src="img/item-3-small.jpg"
-              alt="Фото товара 3"
-              width="140"
-              height="149"
-            />
-          </li>
-        </ul>
-      </section>
+          </p>
+          <ul class="product-photo-preview">
+            <li>
+              <img
+                src="img/item-1-small.jpg"
+                alt="Фото товара 1"
+                width="140"
+                height="149"
+              />
+            </li>
+            <li>
+              <img
+                src="img/item-2-small.jpg"
+                alt="Фото товара 2"
+                width="140"
+                height="149"
+              />
+            </li>
+            <li>
+              <img
+                src="img/item-3-small.jpg"
+                alt="Фото товара 3"
+                width="140"
+                height="149"
+              />
+            </li>
+          </ul>
+        </section>
 
-      <section class="product-info">
-        <h2 class="visually-hidden">Описание товара</h2>
-        <div class="product-description">
-          <p class="product-availability">
-            Есть в наличии
+        <section class="product-info">
+          <h2 class="visually-hidden">Описание товара</h2>
+          <div class="product-description">
+            <p class="product-availability">
+              Есть в наличии
+            </p>
+            <p class="product-article">
+              Артикул: dexter-ae
+            </p>
+          </div>
+          <p class="product-text">
+            Travel Kit – необходимый аксессуар во время любого путешествия. В
+            аккуратной кожаной сумке находится все, что нужно для бритья и ухода
+            за кожей во время рабочей поездки или отдыха: средство для умывания,
+            увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор
+            также может стать отличным подарком.
           </p>
-          <p class="product-article">
-            Артикул: dexter-ae
+          <p class="produc-price">
+            <b>2 900 ₽</b>
+            <a class="button" href="#">Купить</a>
           </p>
-        </div>
-        <p class="product-text">
-          Travel Kit – необходимый аксессуар во время любого путешествия. В
-          аккуратной кожаной сумке находится все, что нужно для бритья и ухода
-          за кожей во время рабочей поездки или отдыха: средство для умывания,
-          увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор
-          также может стать отличным подарком.
-        </p>
-        <p class="produc-price">
-          <b>2 900 ₽</b>
-          <a class="button" href="#">Купить</a>
-        </p>
-        <h3>В набор входят:</h3>
-        <ul>
-          <li>Средство для умывания (50 мл)</li>
-          <li>Увлажняющий крем (50 мл)</li>
-          <li>Крем для бритья (50 мл)</li>
-          <li>Крем после бритья, шампунь (50 мл)</li>
-          <li>Удобная кожаная косметичка</li>
-        </ul>
-      </section>
+          <h3>В набор входят:</h3>
+          <ul>
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бритья, шампунь (50 мл)</li>
+            <li>Удобная кожаная косметичка</li>
+          </ul>
+        </section>
+      </div>
     </main>
 
     <footer class="main-footer">
@@ -168,7 +170,7 @@
         </p>
         <p class="login-password-info">
           <label class="login-checkbox">
-            <input type="checkbox" name="remember" class="visually-hidden"/>
+            <input type="checkbox" name="remember" class="visually-hidden" />
             <span class="checkbox-indicator"></span>
             Запомните меня
           </label>
