--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
             alt="Логотип барбершопа «Бородинский»"
           />
         </a>
-        <ul class="site-navigation">
-          <li><a href="info.html">Информация</a></li>
-          <li><a href="news.html">Новости</a></li>
-          <li><a href="price.html">Прайс-лист</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
-          <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li>
-            <a class="login-link" href="">Вход</a>
-          </li>
-        </ul>
+        <div class="main-navigation-wrapper">
+          <div class="container">
+            <ul class="site-navigation">
+              <li><a href="info.html">Информация</a></li>
+              <li><a href="news.html">Новости</a></li>
+              <li><a href="price.html">Прайс-лист</a></li>
+              <li><a href="catalog.html">Магазин</a></li>
+              <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+            <ul class="user-navigation">
+              <li>
+                <a class="login-link" href="">Вход</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </nav>
     </header>
 
@@ -176,24 +180,26 @@
     </main>
 
     <footer class="main-footer">
-      <p class="footer-contacts">
-        Барбершоп «Бородинский»<br />
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br />
-        <a href="map.html">Как нас найти?</a><br />
-        Телефон: +7 (812) 666-02-66
-      </p>
-      <div class="footer-social">
-        <p>Давайте дружить!</p>
-        <ul>
-          <li><a class="social-button" href="#">Вконтакте</a></li>
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-        </ul>
+      <div class="container">
+        <p class="footer-contacts">
+          Барбершоп «Бородинский»<br />
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br />
+          <a href="map.html">Как нас найти?</a><br />
+          Телефон: +7 (812) 666-02-66
+        </p>
+        <div class="footer-social">
+          <p>Давайте дружить!</p>
+          <ul>
+            <li><a class="social-button" href="#">Вконтакте</a></li>
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+          </ul>
+        </div>
+        <p class="footer-copyright">
+          Разработано:
+          <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+        </p>
       </div>
-      <p class="footer-copyright">
-        Разработано:
-        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
-      </p>
     </footer>
 
     <section class="modal modal-login">
@@ -219,7 +225,7 @@
         </p>
         <p class="login-password-info">
           <label class="login-checkbox">
-            <input type="checkbox" name="remember" class="visually-hidden"/>
+            <input type="checkbox" name="remember" class="visually-hidden" />
             <span class="checkbox-indicator"></span>
             Запомните меня
           </label>
